@@ -2,12 +2,6 @@ AUX compile_with_no-SSP.patch 504 RMD160 930629599b7ccc9b6ec653347701dbab3293c86
 AUX libstdc++-v3-Makefile.in.patch 4069 RMD160 bc8369abd67f629add70b5323ce1f4cc534cfa03 SHA1 637ed2f6499f271c5eb93dd5a12ed04f6f1f09ef SHA256 5ee5bbaf81e1cbe5e07fb48048097cea814e8285aa7bbebb6399d99c349911d3
 DIST gcc-3.3.6-patches-1.6.tar.bz2 48814 RMD160 3f25b67015c6e4d874690c48d23292a670501e0c SHA1 aba4661d50787aad26849497d45194804bf21b73 SHA256 c692f8f00d16947e13dd86ca974e419c35d1befee9ee915fa6c50a741487ef63
 DIST gcc-3.3.6.tar.bz2 23972413 RMD160 b32c7a08c690857f0ac52dda3deb47cf5775d967 SHA1 2cc43978bb09af6c2ccfdf74797d10d7cc2596fb SHA256 1c1aa533c67e9da5e55ed4f5736258dc753466bd716bdae3fb88fb66e6ff1d7f
-DIST gcc-4.4.1-patches-1.0.tar.bz2 11203 RMD160 64d3d6b586442db5313ea49f675371c2fb9fc617 SHA1 85159a40172be6a403c43b268bf23e788ce0697a SHA256 e83392612ff54e4485bad4bb1888b2d247489777807cfaafb8aff3578c39d163
-DIST gcc-4.4.1.tar.bz2 62869928 RMD160 41cb4c76d1671b1d224d2a6e167ee183dd53d096 SHA1 9156ddb7e4cc72288ec31760d6ddc7981123a8a2 SHA256 cbefa9abd4adac0931e1b556072dcd8b32a360d4b95a94d7822c86bded803d5b
-DIST gcc-4.4.2-patches-1.0.tar.bz2 11040 RMD160 008701ce22ef001049871824528d193f66719a1c SHA1 5551ae84e0d6a25b10ca2d59aaf3901a6be0deb2 SHA256 63ef9cc54d9ebe497c6c0a0aa2ccbd006bfbf9dc01176cbfea5d90ad2ee122ee
-DIST gcc-4.4.2.tar.bz2 62919816 RMD160 25014a64d148005868449dfebf91a734d6322227 SHA1 6cf7d9204ff3e1a09f4f12b1372cd4129ab7f080 SHA256 1126b6a7b585b3a178bfb7d559221779eb7eba12ce01bc9ca5896f6f9ee639de
 EBUILD libstdc++-v3-3.3.6-r1.ebuild 4922 RMD160 40eb33da610a5ba429f96e7df23d5611cbcf0338 SHA1 031f40db0737519a903859d3a4bace6902ccf521 SHA256 8d769e5b65ad4755d7d0365f90224fb18b5b9dfd563c949bb6560364a2522b52
-EBUILD libstdc++-v3-4.4.1.ebuild 2420 RMD160 540865cac9cde450a88ed2b475a1518a9f946a96 SHA1 25a0d31147c8828b91539a179ba64157c5168021 SHA256 f32cf0c9ca86d13cff96ae3ef9579a0363272e664af5d7ecde1da75f1c89bace
-EBUILD libstdc++-v3-4.4.2.ebuild 2499 RMD160 950d85cf866a19381c30808e6a37b404b5d5649b SHA1 349f865ce1180f4b2d52627fabbc331979bbe78e SHA256 7a474a1a59455bec7873a965f152199568afe98f109c62d175160cb8c0a8b1c5
-MISC ChangeLog 1226 RMD160 9ebe13eda49051491736a8755b847f9607fef3a3 SHA1 5def213039c014573db8ba40c751c21763257ecd SHA256 5d90b5c25b57b632becd05b234b48990c025503d1d52a1fe53c6987f0e7b0413
+MISC ChangeLog 1371 RMD160 0b1347d4682e74d9580dc17398ababa813e917a9 SHA1 ae6c97474e12637e4b0004c5a885e21f423615fa SHA256 a58780d7e12a3068f5d86274fa5e3fab2e52b202a00743ce5e96728756d63197
 MISC metadata.xml 162 RMD160 d002486a43522f2116b1d9d59828c484956d66e2 SHA1 d6b4923897f6ae673b4f93646f5b4ba61d5a2c3c SHA256 65a915d44de1f01d4b7f72d313b4192c38374a9835d24988c00c1e73dca5805a
